# gplately

./: .gitattributes  .gitignore  01-GettingStarted.html  03-WorkingWithPoints.html  04-VelocityBasics.html  07-WorkingWithPlateTectonicStats.html  08-PredictingSlabDip.html  08-PredictingSlabFlux.html  10-SeafloorGrids.html  MANIFEST.in  PNG_reconstruction_copper_deposits.html  README.md  create_age_grids.html  data.html  decorators.html  dev  download.html  exceptions.html  feature_filter.html  geometry.html  gpml.html  grids.html  index.html  io.html  models.json  oceans.html  parallel.html  plot.html  pmag_demo_plot.ipynb  pygplates.html  pyproject.toml  pytest.ini  read_geometries.html  reconstruction.html  release-guidelines.md  setup.py  tools.html  utils.html  v2.0.0
.github/workflows/: build-and-push-docker.yml  (+9 more)
.pdoc_template/: config.mako  logo.mako
Notebooks/: 01-GettingStarted.ipynb  02-PlateReconstructions.ipynb  03-WorkingWithPoints.ipynb  04-VelocityBasics.ipynb  05-WorkingWithFeatureGeometries.ipynb  06-Rasters-B.ipynb  06-Rasters.ipynb  07-WorkingWithPlateTectonicStats.ipynb  08-PredictingSlabDip.ipynb  08-PredictingSlabFlux.ipynb  08-RidgeAndTrenchLengths.ipynb  09-AgeGridding.ipynb  09-CreatingMotionPathsAndFlowlines.ipynb  09-PredictingSlabDip.ipynb  10-AgeGridding.ipynb  10-GlobalAvgVelocities.ipynb  10-SeafloorGrids.ipynb  11-AndesFluxes.ipynb  12-MutschlerWorldPorphyryCopperDepositsRegionalPlots.ipynb  13-ReconstructingZirconData.ipynb  14-FeatureSearch.ipynb  14-FeatureSearch.py  14-FeatureSearchNotebook.py  14-RuleBasedGPMLProcessingPipeline.ipynb  14-RuleBasedGPMLProcessingPipeline.py  15-ConvertGridReferenceFrame.ipynb  Holm_et_al_2019_Table_1_ed.csv  PNG_reconstruction_copper_deposits.ipynb  README.md
commands/: create_age_grids.html  feature_filter.html  index.html
conda/: conda_build_config.yaml  doc-env.yml  meta.yaml
dev-doc/: 01-GettingStarted.html  03-WorkingWithPoints.html  04-VelocityBasics.html  07-WorkingWithPlateTectonicStats.html  08-PredictingSlabFlux.html  10-SeafloorGrids.html  11-AndesFluxes.html  auxiliary.html  download.html  geometry.html  gpml.html  grids.html  index.html  oceans.html  parallel.html  plot.html  pygplates.html  reconstruction.html  spatial.html  tools.html
docker/: Dockerfile  README.md  build-docker-image-version.txt  env.yaml
examples/: index.html  introducing-plate-model-manager.html  working-with-plate-model-manager.html
gplately/: __init__.py  __main__.py  auxiliary.py  cache.py  create_age_grids.py  data.py  data_server.py  decorators.py  download.py  download_cache.py  examples  exceptions.py  feature_filter.py  geometry.py  gpml.py  grids.py  io.py  logging_config.yaml  network.py  network_aiohttp.py  network_requests.py  notebooks  oceans.py  parallel.py  plate_model.py  plot.py  plotting_geopandas.py  points.py  pygplates.py  reconstruction.py  spatial.py  tools.py  utils.py
notebooks/: index.html
plot/: index.html  plot_topologies.html  subduction_teeth.html
pmag_test_data/: Torsvik_2012.gpml
ptt/: cleanup_topologies.html  continent_contours.html  convert_xy_to_gplates.html  diagnose_rotations.html  documentation.html  fix_crossovers.html  gpmdb.html  index.html  remove_plate_rotations.html  resolve_topologies.html  ridge_spreading_rate.html  rotation_tools.html  separate_ridge_transform_segments.html  subduction_convergence.html  velocity_tools.html
release/: release-guidelines.md  release-notes-2.0.0.md
scripts/: build-doc.sh  build-sphinx-doc.sh  convert-notebooks-to-html.sh  create-tag.py  create-tag.sh  generate-notebook-from-py.sh  pypi-publish.sh  test_feature_filter.sh
sphinx-doc/: readme.md
test/: conftest.html  conftest.py  index.html  test-env.yml  test.yml  test_0_imports.html  test_1_reconstructions.html  test_1_reconstructions.py  test_2_points.py  test_3_plottopologies.py  test_4_rasters.py  test_5_seafloorgrid.py  test_6_geometry.py  test_cache.py  test_download.py
test-with-plate-model-manager/: conftest.py  test_1_reconstructions_pmm.py  test_3_plottopologies.py  test_4_rasters.py
tests/: test_plot_pygplates_features.py
tests-dir/: readme.md  release-test-guideline.md  test-env.yml
unittest/: test_cache.py  test_concurrent_download.py  test_download.py  test_download_large_file.py  test_plate_model.py  test_plot.py
utils/: feature_utils.html  index.html  io_utils.html  log_utils.html  plot_utils.html
v1.0.0/: 01-GettingStarted.html  03-WorkingWithPoints.html  download.html  grids.html  index.html  io.html  oceans.html  plot.html  pygplates.html  reconstruction.html  tools.html
v1.1.0/: feature_filter.html  grids.html  index.html  oceans.html  plot.html  reconstruction.html  tools.html
v1.2.0/: 07-WorkingWithPlateTectonicStats.html  08-PredictingSlabFlux.html  10-SeafloorGrids.html  feature_filter.html  gpml.html  grids.html  index.html  oceans.html  plot.html  reconstruction.html
v1.3.0/: 03-WorkingWithPoints.html  04-VelocityBasics.html  07-WorkingWithPlateTectonicStats.html  08-PredictingSlabFlux.html  10-SeafloorGrids.html  feature_filter.html  geometry.html  index.html  pygplates.html  read_geometries.html  reconstruction.html
(+697 files in other folders)
